fixed padding on mobile

--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -113,8 +113,8 @@ $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15)
       transform: translateY(2rem)
       padding: 0 1rem
 
-    p
-      padding: 2rem 1rem 1rem
+    .left, .right
+      padding: 1rem
 
   .hero
     flex-direction: column
